# pytest-gremlins-action

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  integration-test.yml  test.yml
docs/spikes/: spike-3-actions-marketplace.md
features/: action_behavior.feature  environment.py
features/steps/: _helpers.py  action_steps.py  pending_steps.py
scripts/: badge.sh  parse-report.sh  pr-comment.sh  ratchet.sh  run-gremlins.sh
spike-fixture/: .gitignore  mathlib.py  pyproject.toml
spike-fixture/tests/: test_mathlib.py
