[project]
name = "pytest-gremlins-action"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "behave==1.3.3",
    "pytest>=9.0,<10",
    "pytest-gremlins==1.5.0",
    "pytest-xdist>=3.0",
]

[tool.pytest.ini_options]
# BDD scenarios live under features/ and are run via behave, not pytest.
# This pyproject.toml is for dependency declaration only — no build backend.
testpaths = []
